[WEATHER-2] Added units for details display and comments on code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,21 @@
     <string name="app_name">Weather_App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="ajouter_une_ville">Ajouter une ville</string>
-    <string name="annuler">Annuler</string>
-    <string name="ajoute_avec_succes">ajouté avec succès!</string>
+    <string name="ajouter_une_ville">Add a city</string>
+    <string name="annuler">Cancel</string>
+    <string name="ajoute_avec_succes">added successfully!</string>
     <string name="ville">Ville</string>
-    <string name="aucune_ville_enregistrée">Aucune ville enregistrée</string>
-    <string name="existe_déjà">existe déjà!</string>
-    <string name="température_min">Température min :</string>
-    <string name="température_max">Température max :</string>
+    <string name="aucune_ville_enregistrée">No registered cities</string>
+    <string name="existe_déjà">already exists!</string>
+    <string name="température_min">Temperature min :</string>
+    <string name="température_max">Temperature max :</string>
     <string name="conditions">Conditions :</string>
-    <string name="température">Température :</string>
+    <string name="température">Temperature :</string>
     <string name="pressure">Pressure :</string>
     <string name="humidity">Humidity :</string>
     <string name="wind">Wind</string>
     <string name="speed">Speed :</string>
+    <string name="onFailure_msg">Api error</string>
+    <string name="entrez_nom_ville">Type city name</string>
+
 </resources>
